--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "test"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.8.1",
     "abbrev": "^1.0.9",
     "abort-controller": "^3.0.0",
     "abstract-level": "^1.0.3",
@@ -262,8 +263,8 @@
     "lodash.truncate": "^4.4.2",
     "log-symbols": "^4.1.0",
     "loupe": "^2.3.6",
-    "lru-cache": "^5.1.1",
     "lru_map": "^0.3.3",
+    "lru-cache": "^5.1.1",
     "make-error": "^1.3.6",
     "markdown-table": "^1.1.3",
     "mcl-wasm": "^0.7.9",
@@ -378,11 +379,11 @@
     "statuses": "^2.0.1",
     "stealthy-require": "^1.1.1",
     "streamsearch": "^1.1.0",
+    "string_decoder": "^1.3.0",
     "string-format": "^2.0.0",
     "string-width": "^2.1.1",
     "string.prototype.trimend": "^1.0.6",
     "string.prototype.trimstart": "^1.0.6",
-    "string_decoder": "^1.3.0",
     "strip-ansi": "^4.0.0",
     "strip-hex-prefix": "^1.0.0",
     "strip-json-comments": "^3.1.1",
@@ -449,7 +450,7 @@
     "compile": "hardhat compile",
     "deploy": "hardhat run scripts/deploy.js --network localhost",
     "test": "hardhat test --network localhost",
-	"test:ci": "hardhat test --network hardhat --coverage"
+    "test:ci": "hardhat test --network hardhat --coverage"
   },
   "repository": {
     "type": "git",
